--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Semantic Form Challenge</title>
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -14,7 +15,9 @@
         <h1>Sign Up Now</h1>
         <p>Pick your new website, free forever.</p>
       </div>
-      <hr />
+      <svg class="divider">
+        <line y1="1" y2="1" x1="10" x2="90%" shape-rendering="crispEdges" />
+      </svg>
       <div class="container">
         <span class="stage">1</span><h2>Pick a website address.</h2>
         <fieldset>
