--- a/index.html
+++ b/index.html
@@ -53,27 +53,29 @@
           <div class="full-width">
             <label class="block" for="cc-number">Credit card number:</label>
             <input id="cc-number" class="outline" required
+              onkeyup="handleCreditCardInput(this)"
               pattern="[0-9]{4}\s?[0-9]{4}\s?[0-9]{4}\s?[0-9]{4}"
               title="Please fill in the credit card info using the right format."/><!--
             --><div class="cc">
-              <img src="assets/images/cc-icon-visa.png"
+              <img id="visa-cc" src="assets/images/cc-icon-visa.png"
                 srcset="assets/images/cc-icon-visa.png 1x, assets/images/cc-icon-visa@2x.png 2x"
-                alt="visa credit card" /><!--
-              --><img src="assets/images/cc-icon-mastercard.png"
+                alt="visa credit card" class="hide-cc" /><!--
+              --><img id="mastercard-cc" src="assets/images/cc-icon-mastercard.png"
                 srcset="assets/images/cc-icon-mastercard.png 1x, assets/images/cc-icon-mastercard@2x.png 2x"
-                alt="mastercard credit card" /><!--
-              --><img src="assets/images/cc-icon-discover.png"
+                alt="mastercard credit card" class="hide-cc" /><!--
+              --><img id="discover-cc" src="assets/images/cc-icon-discover.png"
                 srcset="assets/images/cc-icon-discover.png 1x, assets/images/cc-icon-discover@2x.png 2x"
-                alt="discover credit card" /><!--
-              --><img src="assets/images/cc-icon-amex.png"
+                alt="discover credit card" class="hide-cc" /><!--
+              --><img id="amex-cc" src="assets/images/cc-icon-amex.png"
                 srcset="assets/images/cc-icon-amex.png 1x, assets/images/cc-icon-amex@2x.png 2x"
-                alt="amex credit card" />
+                alt="amex credit card" class="hide-cc" />
             </div>
           </div>
           <div class="security-code-box">
             <label for="security-code">Security code:</label>
             <input id="security-code" class="full-width outline" required
-              type="number" placeholder="123" min="000" max="999" step="1" />
+              pattern="[0-9]{3,4}"
+              title="Security code should be 3 or 4 digits long" />
           </div>
           <div class="expiration-date-box">
             <label for="expiration-date">Expiration date:</label>
@@ -92,10 +94,9 @@
                 <option value="11">11 - November</option>
                 <option value="12">12 - December</option>
               </select><!--
-              --><input type="number" class="year-picker outline"
-                  placeholder="2020" required
-                  step=1 min="1950" max="2025"
-                  arialabeledby="expiration-date"/>
+              --><input class="year-picker outline" required
+                  arialabeledby="expiration-date" pattern="[0-9]{4}"
+                  title="You should write year in YYYY format, ex. 2017" />
           </div>
           </div>
         </fieldset>
