input name attributes were missing

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <legend>Pick a website address.</legend>
             <fieldset>
             <label for="subdomain">Website address:</label>
-            <input id="subdomain" placeholder="yoursubdomain"
+            <input id="subdomain" name="subdomain" placeholder="yoursubdomain"
               autofocus class="outline full-width subdomain"
               autocomplete="off" required
               /><!--
@@ -36,14 +36,16 @@
           <legend>Create an account.</legend>
           <fieldset>
             <label for="full-name">Full name:</label>
-            <input id="full-name" class="outline full-width" required />
-            <label for="email">Email address:</label>
-            <input id="email" type="email" class="outline full-width"
-              oninvalid="emailError()" onkeypress="clearError()" required />
-            <label for="password">Password:</label>
-            <input id="password" type="password" class="outline full-width"
+            <input id="full-name" name="full-name" class="outline full-width"
               required />
-            <input id="password-visible" type="checkbox"
+            <label for="email">Email address:</label>
+            <input id="email" name="email" type="email"
+              class="outline full-width" oninvalid="emailError()"
+              onkeypress="clearError()" required />
+            <label for="password">Password:</label>
+            <input id="password" name="password" type="password"
+              class="outline full-width" required />
+            <input id="password-visible" name="password-visible" type="checkbox"
               name="password-visible" onclick="handlePasswordReveal(this)"/><!--
             --><label for="password-visible">Reveal password</label>
             <noscript>
@@ -59,7 +61,7 @@
             <fieldset>
               <div class="full-width">
                 <label class="block" for="cc-number">Credit card number:</label>
-                <input id="cc-number" class="outline" required
+                <input id="cc-number" name="cc-number" class="outline" required
                   onkeyup="handleCreditCardInput(this)"
                   pattern="[0-9]{4}\s?[0-9]{4}\s?[0-9]{4}\s?[0-9]{4}"
                   title="Please fill in the credit card info using the right format."/><!--
@@ -78,7 +80,7 @@
                     alt="amex credit card" class="hide-cc" />
                 </div>
                 <noscript>
-                  <select required class="card-picker outline" >
+                  <select name="cc-type" required class="card-picker outline" >
                     <option value="" selected disabled>Card type</option>
                     <option value="visa-cc">Visa</option>
                     <option value="mastercard-cc">Mastercard</option>
@@ -89,14 +91,15 @@
               </div>
               <div class="security-code-box">
                 <label for="security-code">Security code:</label>
-                <input id="security-code" class="full-width outline" required
-                  pattern="[0-9]{3,4}"
+                <input id="security-code" name="security-code"
+                  class="full-width outline" required pattern="[0-9]{3,4}"
                   title="Security code should be 3 or 4 digits long" />
               </div>
               <div class="expiration-date-box">
                 <label for="expiration-date">Expiration date:</label>
                 <div class="block">
-                  <select id="expiration-date" class="month-picker outline">
+                  <select id="expiration-date" name="expiration-month"
+                    class="month-picker outline">
                     <option value="01">01 - January</option>
                     <option value="02">02 - February</option>
                     <option value="03">03 - March</option>
@@ -110,7 +113,7 @@
                     <option value="11">11 - November</option>
                     <option value="12">12 - December</option>
                   </select><!--
-                  --><input class="year-picker outline" required
+                  --><input name="expiration-year" class="year-picker outline" required
                       arialabeledby="expiration-date" pattern="[0-9]{4}"
                       title="You should write year in YYYY format, ex. 2017" />
               </div>
