--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600"
       rel="stylesheet">
-      <noscript><style> .cc { display: none } </style></noscript>
+    <noscript><style>.no-js-hide { display: none }</style></noscript>
   </head>
   <body>
-    <form class="signup-form">
+    <form id="signup-form" class="signup-form" onsubmit="onSubmit(event)">
       <div class="container">
         <legend class="main-header">Sign Up Now</legend>
         <span>Pick your new website, free forever.</span>
@@ -25,11 +25,12 @@
             <legend>Pick a website address.</legend>
             <fieldset>
             <label for="subdomain">Website address:</label>
-            <input id="subdomain" name="subdomain" placeholder="yoursubdomain"
+            <label class="domain-suffix">.free-website.com</label><!--
+            --><input id="subdomain" name="subdomain" placeholder="yoursubdomain"
               autofocus class="outline full-width subdomain"
               autocomplete="off" required
-              /><!--
-            --><label class="domain-suffix">.free-website.com</label>
+              />
+
             </fieldset>
           </li>
         <li>
@@ -45,15 +46,11 @@
             <label for="password">Password:</label>
             <input id="password" name="password" type="password"
               class="outline full-width" required />
-            <input id="password-visible" name="password-visible" type="checkbox"
-              name="password-visible" onclick="handlePasswordReveal(this)"/><!--
-            --><label for="password-visible">Reveal password</label>
-            <noscript>
-              <span class="alert">
-                Your browser has JavaScript disabled. <br />
-                You won't be able to reveal your password using this option.
-              </span>
-            </noscript>
+            <div class="no-js-hide">
+              <input id="password-visible" name="password-visible" type="checkbox"
+                name="password-visible" onclick="handlePasswordReveal(this)"/><!--
+              --><label for="password-visible">Reveal password</label>
+            </div>
           </fieldset>
           </li>
           <li>
@@ -66,28 +63,21 @@
                   pattern="[0-9]{4}\s?[0-9]{4}\s?[0-9]{4}\s?[0-9]{4}"
                   title="Please fill in the credit card info using the right format."/><!--
                 --><div class="cc">
-                  <img id="visa-cc" src="assets/images/cc-icon-visa.png"
-                    srcset="assets/images/cc-icon-visa.png 1x, assets/images/cc-icon-visa@2x.png 2x"
-                    alt="visa credit card" class="hide-cc" /><!--
-                  --><img id="mastercard-cc" src="assets/images/cc-icon-mastercard.png"
-                    srcset="assets/images/cc-icon-mastercard.png 1x, assets/images/cc-icon-mastercard@2x.png 2x"
-                    alt="mastercard credit card" class="hide-cc" /><!--
-                  --><img id="discover-cc" src="assets/images/cc-icon-discover.png"
-                    srcset="assets/images/cc-icon-discover.png 1x, assets/images/cc-icon-discover@2x.png 2x"
-                    alt="discover credit card" class="hide-cc" /><!--
-                  --><img id="amex-cc" src="assets/images/cc-icon-amex.png"
-                    srcset="assets/images/cc-icon-amex.png 1x, assets/images/cc-icon-amex@2x.png 2x"
-                    alt="amex credit card" class="hide-cc" />
+                  <noscript>
+                    <input type="radio" name="cc-option" id="visa-cc" value="visa" /><!--
+                    --><label for="visa-cc" class="visa-cc-label"></label><!--
+                    --><input type="radio" name="cc-option" id="mastercard-cc" value="mastercard" /><!--
+                    --><label for="mastercard-cc" class="mastercard-cc-label"></label><!--
+                    --><input type="radio" name="cc-option" id="discover-cc" value="discover" /><!--
+                    --><label for="discover-cc" class="discover-cc-label"></label><!--
+                    --><input type="radio" name="cc-option" id="amex-cc" value="amex" /><!--
+                    --><label for="amex-cc" class="amex-cc-label"></label>
+                  </noscript>
+                  <label id="visa-cc" class="visa-cc-label no-js-hide"></label><!--
+                  --><label id="mastercard-cc" class="mastercard-cc-label no-js-hide"></label><!--
+                  --><label id="discover-cc" class="discover-cc-label no-js-hide"></label><!--
+                  --><label id="amex-cc" class="amex-cc-label no-js-hide"></label>
                 </div>
-                <noscript>
-                  <select name="cc-type" required class="card-picker outline" >
-                    <option value="" selected disabled>Card type</option>
-                    <option value="visa-cc">Visa</option>
-                    <option value="mastercard-cc">Mastercard</option>
-                    <option value="discover-cc">Discover</option>
-                    <option value="amex-cc">Amex</option>
-                  </select>
-                </noscript>
               </div>
               <div class="security-code-box">
                 <label for="security-code">Security code:</label>
@@ -113,11 +103,12 @@
                     <option value="11">11 - November</option>
                     <option value="12">12 - December</option>
                   </select><!--
-                  --><input name="expiration-year" class="year-picker outline" required
-                      arialabeledby="expiration-date" pattern="[0-9]{4}"
-                      title="You should write year in YYYY format, ex. 2017" />
+                  --><input id="expiration-year" name="expiration-year" class="year-picker outline" required
+                    arialabeledby="expiration-date" pattern="[0-9]{4}"
+                    title="You should write year in YYYY format, ex. 2017" />
+                </div>
               </div>
-              </div>
+              <div id="lastRowDiv"></div>
             </fieldset>
           </li>
         </ol>
